make a more unique name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nsp-test-module",
+  "name": "nsp-test-module-rq",
   "version": "1.0.2",
   "description": "",
   "main": "index.js",
